name: ODEHask
version: 0.1
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
author: david
data-dir: ""
 
executable ODEHask
    build-depends: base >=4, parsec >=3.1.5 && <3.2,
                   linear >=1.6 && <1.7, time >=1.4.0 && <1.5, HTF >=0.11.2 && <0.12,
                   deepseq >=1.3.0 && <1.4, tau >=6.2831 && <6.2832,
                   array >=0.4.0 && <0.5
    main-is: Main.hs
    buildable: True
    extensions: ForeignFunctionInterface
    extra-libraries: stdc++ OgreMain OIS boost_system boost_chrono glut
                     GL GLU ode
    hs-source-dirs: src
    other-modules: Data.Geom MotionData Util FFI Data.Bone
    ghc-options: -Wall /home/david/git/ode/Debug/ODE_01/src/*.o /home/david/git/ode/Debug/ODE_01/src/OgreProcedural/src/*.o
 